# transcriber

./: .gitignore  README.md  config.example.yaml  index.html  package-lock.json  package.json
docs/: info.md
scripts/: copy-fonts.mjs  copy-vad-assets.mjs
src/: app.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
